log/build_2023-02-10_03-12-47/turtle_control_FRA/stdout_stderr.log
running egg_info
writing ../../build/turtle_control_FRA/turtle_control_FRA.egg-info/PKG-INFO
writing dependency_links to ../../build/turtle_control_FRA/turtle_control_FRA.egg-info/dependency_links.txt
writing entry points to ../../build/turtle_control_FRA/turtle_control_FRA.egg-info/entry_points.txt
writing requirements to ../../build/turtle_control_FRA/turtle_control_FRA.egg-info/requires.txt
writing top-level names to ../../build/turtle_control_FRA/turtle_control_FRA.egg-info/top_level.txt
reading manifest file '../../build/turtle_control_FRA/turtle_control_FRA.egg-info/SOURCES.txt'
writing manifest file '../../build/turtle_control_FRA/turtle_control_FRA.egg-info/SOURCES.txt'
running build
running build_py
copying turtle_control_FRA/turtle_control.py -> /root/ros2_ws/build/turtle_control_FRA/build/lib/turtle_control_FRA
running install
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
running install_lib
copying /root/ros2_ws/build/turtle_control_FRA/build/lib/turtle_control_FRA/turtle_control.py -> /root/ros2_ws/install/turtle_control_FRA/lib/python3.10/site-packages/turtle_control_FRA
byte-compiling /root/ros2_ws/install/turtle_control_FRA/lib/python3.10/site-packages/turtle_control_FRA/turtle_control.py to turtle_control.cpython-310.pyc
  File "/root/ros2_ws/install/turtle_control_FRA/lib/python3.10/site-packages/turtle_control_FRA/turtle_control.py", line 77
    if abs(self.x_error) > 0,5 and abs(self.y_error) > 0,5:
                            ^
SyntaxError: invalid syntax

running install_data
running install_egg_info
removing '/root/ros2_ws/install/turtle_control_FRA/lib/python3.10/site-packages/turtle_control_FRA-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/turtle_control_FRA/turtle_control_FRA.egg-info to /root/ros2_ws/install/turtle_control_FRA/lib/python3.10/site-packages/turtle_control_FRA-0.0.0-py3.10.egg-info
running install_scripts
Installing turtle_control script to /root/ros2_ws/install/turtle_control_FRA/lib/turtle_control_FRA
writing list of installed files to '/root/ros2_ws/build/turtle_control_FRA/install.log'
